@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.tanaguru</groupId>
         <artifactId>web-app</artifactId>
-        <version>3.0.6</version>
+        <version>3.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>tgol-web-app</artifactId>
     <packaging>war</packaging>
@@ -142,10 +142,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
@@ -247,7 +247,7 @@
     <build>
         <plugins>
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -278,6 +278,26 @@
                     <failOnWarning>false</failOnWarning>
                 </configuration>
             </plugin>
+            <!--            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <path>/tgol</path>
+                    <port>8182</port>
+                    <systemProperties>
+                        <WEB-APP-URL>http://$host:$port/tgol</WEB-APP-URL>
+                        <CONFIG_TANAGURU >$path_to_tgol_conf_dir\tanaguru</CONFIG_TANAGURU >
+                        <test.key>true</test.key>
+                        <MAVEN_OPTS>-Xms512m -Xmx512m -XX:PermSize=512m
+                            -XX:MaxPermSize=512m -Dfile.encoding=UTF-8</MAVEN_OPTS>
+                    </systemProperties>
+                    <server>tomcat</server>
+                    <warFile>${project.build.directory}/${project.build.finalName}.war</warFile>
+                    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+                    <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
+                </configuration>
+            </plugin>-->
         </plugins>
         <finalName>tgol-web-app-${webappVersion}</finalName>
     </build>
@@ -315,7 +335,7 @@
                                               keyfile="${qa.keyFile}" 
                                               passphrase="${qa.passPhrase}" />
                                         <!-- see also: http://ant.apache.org/manual/Tasks/scp.html -->
-<!--                                        <exec executable="/bin/sh">
+                                        <!--                                        <exec executable="/bin/sh">
                                             <arg value="/root/bin/restart-tg-instance.sh"/>
                                         </exec>-->
                                     </target>
